fix: fix width on html that was causing overflow

--- a/_includes/site.css
+++ b/_includes/site.css
@@ -27,7 +27,6 @@ html {
     font-size: var(--font-125);
     line-height: var(--line-height);
     height: 100vh;
-    width: 100vw;
 }
 ::-webkit-scrollbar {
     background-color: #1c1e1f;
